--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "check": "astro check"
   },
   "dependencies": {
-    "astro": "^5.9.1"
+    "@astrojs/check": "^0.9.4",
+    "astro": "^5.9.1",
+    "typescript": "^5.8.3"
   }
 }
