feat(contact): Add interactive contact form with React and toasts
Introduces a new "Connect" section with an interactive contact form built using React, demonstrating the use of UI framework components for dynamic client-side functionality.

This commit includes several key additions:
1.  **React Integration**: The `@astrojs/react` integration is added to the project, enabling the use of React components.
2.  **Toast Notifications**: The `react-hot-toast` library is included to provide user feedback.
3.  **Contact Form Component**: A new `ContactForm.tsx` React component is created. It manages its own state for the email input and simulates an API call on submission, displaying a success message using a toast notification.
4.  **Host Component**: A new `Connect.astro` component is created to serve as the host section for the React form, rendering it on the page with a `client:load` directive.

This demonstrates the "Astro Islands" architecture by embedding a stateful, interactive React application within an otherwise static Astro page.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.3.0",
     "@astrojs/sitemap": "^3.4.2",
-    "astro": "^5.10.1"
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "astro": "^5.10.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.5.2"
   }
 }
