--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.5",
-    "astro": "^5.13.2"
+    "@astrojs/react": "^4.4.0",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "astro": "^5.13.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   }
 }
