--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "check": "astro check",
+    "check:watch": "astro check --watch"
   },
   "dependencies": {
     "@astrojs/rss": "^4.0.13",
     "astro": "^5.15.3"
+  },
+  "devDependencies": {
+    "@astrojs/check": "^0.9.5",
+    "typescript": "^5.9.3"
   }
 }
