--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "check:watch": "astro check --watch"
   },
   "dependencies": {
+    "@astrojs/node": "^9.5.0",
     "@astrojs/rss": "^4.0.13",
     "astro": "^5.15.3"
   },
