--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "astro-course-files",
   "type": "module",
   "version": "0.0.1",
+  "engines": {
+    "npm": "^11.6.1",
+    "node": ">= 22"
+  },
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
